[FIX] image path in quickstart.ipynb

--- a/quickstart.ipynb
+++ b/quickstart.ipynb
@@ -187,8 +187,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-03-08 12:28:33,400 - INFO - Computing calculated attributes for UserJourneyStep 20 min streaming\n",
-      "2024-03-08 12:28:33,404 - INFO - Computing calculated attributes for UserJourneyStep 0.4s of upload\n"
+      "2024-03-08 14:12:22,372 - INFO - Computing calculated attributes for UserJourneyStep 20 min streaming\n",
+      "2024-03-08 14:12:22,375 - INFO - Computing calculated attributes for UserJourneyStep 0.4s of upload\n"
      ]
     }
    ],
@@ -232,7 +232,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-03-08 12:28:33,411 - INFO - Computing calculated attributes for UserJourney Mean video consumption user journey\n"
+      "2024-03-08 14:12:22,381 - INFO - Computing calculated attributes for UserJourney Mean video consumption user journey\n"
      ]
     }
    ],
@@ -258,13 +258,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-03-08 12:28:33,430 - INFO - Computing calculated attributes for System System\n",
-      "2024-03-08 12:28:33,432 - INFO - Computing calculated attributes for UsagePattern Daily video streaming consumption\n",
-      "2024-03-08 12:28:33,433 - INFO - Computing calculated attributes for DevicePopulation French households’ laptops\n",
-      "2024-03-08 12:28:33,440 - INFO - Computing calculated attributes for Service Streaming platform\n",
-      "2024-03-08 12:28:33,449 - INFO - Computing calculated attributes for Network WIFI network\n",
-      "2024-03-08 12:28:33,453 - INFO - Computing calculated attributes for Autoscaling Autoscaling server\n",
-      "2024-03-08 12:28:33,461 - INFO - Computing calculated attributes for Storage SSD storage\n"
+      "2024-03-08 14:12:22,397 - INFO - Computing calculated attributes for System System\n",
+      "2024-03-08 14:12:22,398 - INFO - Computing calculated attributes for UsagePattern Daily video streaming consumption\n",
+      "2024-03-08 14:12:22,400 - INFO - Computing calculated attributes for DevicePopulation French households’ laptops\n",
+      "2024-03-08 14:12:22,404 - INFO - Computing calculated attributes for Service Streaming platform\n",
+      "2024-03-08 14:12:22,411 - INFO - Computing calculated attributes for Network WIFI network\n",
+      "2024-03-08 14:12:22,415 - INFO - Computing calculated attributes for Autoscaling Autoscaling server\n",
+      "2024-03-08 14:12:22,423 - INFO - Computing calculated attributes for Storage SSD storage\n"
      ]
     }
    ],
@@ -358,7 +358,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x11d959f40>"
+       "<IPython.lib.display.IFrame at 0x10aba9d30>"
       ]
      },
      "execution_count": 10,
@@ -396,8 +396,11 @@
    "source": [
     "# Static display for github, works only from e-footprint repository base folder\n",
     "from IPython.display import display, Image\n",
+    "from efootprint.constants.files import EFOOTPRINT_ROOT_PATH\n",
     "\n",
-    "display(Image(filename=os.path.join(\"images\", \"obj_relationships_graph_example.png\"), width=500, height=50))"
+    "IMAGES_PATH = os.path.join(EFOOTPRINT_ROOT_PATH, \"..\", \"images\")\n",
+    "\n",
+    "display(Image(filename=os.path.join(IMAGES_PATH, \"obj_relationships_graph_example.png\"), width=500, height=50))"
    ]
   },
   {
@@ -438,7 +441,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x10ead0290>"
+       "<IPython.lib.display.IFrame at 0x105907110>"
       ]
      },
      "execution_count": 12,
@@ -477,7 +480,7 @@
     "# Static display for github, works only from e-footprint repository base folder\n",
     "from IPython.display import display, Image\n",
     "\n",
-    "display(Image(filename=os.path.join(\"images\", \"device_population_fab_footprint_calculus_graph_example.png\"), width=800, height=500))"
+    "display(Image(filename=os.path.join(IMAGES_PATH, \"device_population_fab_footprint_calculus_graph_example.png\"), width=800, height=500))"
    ]
   },
   {
