[REFACTO] Delete service.py + Tests

--- a/docs_sources/doc_utils/builders.ipynb
+++ b/docs_sources/doc_utils/builders.ipynb
@@ -671,7 +671,7 @@
    "source": [
     "print(on_premise_server_from_config(\n",
     "    \"My server\", nb_of_cpu_units=2, nb_of_cores_per_cpu_unit=24,nb_of_ram_units=6,\n",
-    "    ram_quantity_per_unit_in_gb=16, average_carbon_intensity=SourceValue(100 * u.g / u.kWh)))"
+    "    ram_quantity_per_unit_in_gb=16, average_carbon_intensity=SourceValue(100 * u.g / u.kWh),base_ram_consumption=SourceValue(1 * u.MB)))"
    ]
   },
   {
@@ -720,13 +720,11 @@
    ],
    "source": [
     "from efootprint.builders.usage.job_ecobenchmark.ecobenchmark_job_builder import ecobenchmark_job\n",
-    "from efootprint.core.service import Service\n",
     "\n",
     "server = default_autoscaling()\n",
     "storage = default_ssd()\n",
-    "service = Service(\"test service\", server, storage, base_ram_consumption=SourceValue(1 * u.MB))\n",
     "job = ecobenchmark_job(\n",
-    "    \"test job\", service, data_upload=SourceValue(1 * u.MB), data_download=SourceValue(1 * u.MB),\n",
+    "    \"test job\", server, storage, data_upload=SourceValue(1 * u.MB), data_download=SourceValue(1 * u.MB),\n",
     "    technology='php-symfony')\n",
     "\n",
     "print(job)"
